--- a/SAP_logic/SAP_logic/SAP_logic.vcxproj
+++ b/SAP_logic/SAP_logic/SAP_logic.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{805a61be-c56e-476c-9003-417d87fbc0c6}</ProjectGuid>
     <RootNamespace>SAPlogic</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>SAP</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -138,6 +139,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SAP.h" />
+    <ClInclude Include="SAP_Logic.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
@@ -148,6 +150,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="SAP.cpp" />
+    <ClCompile Include="SAP_Logic.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
