--- a/SAP_logic/SAP_logic/SAP_logic.vcxproj.filters
+++ b/SAP_logic/SAP_logic/SAP_logic.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="pch.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="SAP_Logic.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
     <ClInclude Include="SAP.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
@@ -30,6 +33,9 @@
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="SAP_Logic.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
     <ClCompile Include="SAP.cpp">
